2005-05-28  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/xml/cmlformat.cpp: Fixed PR 1975137 - atoi, strtol
	require null terminated strings.

2008-05-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/obiter.cpp: (same as Chris' commit, but let's do the same for angles)
	Make sure to always set _i, even when _vtorsion is empty.
	Otherwise OBMolTorsionIter::bool() will compare _i to _vtorsion.end() which
	caused a segfault on windows. Fixes Avogadro windows bug #1972244.


2008-05-27 Chris Morley

	* src/obiter.cpp(OBMolTorsionIter::OBMolTorsionIter):
	prevent crash when _vtorsion is empty. Was affecting builder
	with small molecules.


2008-05-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.* src/formats/Makefile.*: Add versioned install
	directories for formats. Fixes PR#1905093.

	* src/formats/hinformat.cpp: Fix PR#1947913 with hang during HIN
	reading.

2005-05-26  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Creating SWIG wrapper for C#
	* windows-vc2005/OpenBabelOBF.sln, OBJava, OBCSharp: Creating projects
	for OBJava and OBCSharp

2008-05-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/builder.cpp: Fix bug. CorrectStereoAtoms was not checking the 
	size of refs, before doing refs[0]...refs[3] (thanks Noel)

2008-05-25 Chris Morley
	
	windows-vc2005/examples: new folder with an example project
	for OBF build. Will replace /template.

2008-05-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Setup(), delete TorsionData before using 
	FOR_TORSION_OF_MOL. (fixed #1954233)

	* windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj: Correct
	location for obmolecformat.cpp

2005-05-24  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/java/README: Updated instructions for using Java bindings on
	Linux

2008-05-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* windows-vc2005/openbabel.sln: remove non-existing OBPython and test, 
	add template.
